resources/assets/sass/_booth.scss
.ballot-box {
    background: $gray-lighter;
    padding: 1.5rem;
    margin-bottom: 1.5rem;

    h3 {
        font-weight: bold;
    }

    hr {
        margin: 1rem 0;
    }
}

.ballot-block {
    max-width: 600px;
    margin: 1rem auto;
    border: 4px $brand-success solid;
    padding: 2rem;

    h3 {
        margin: -2rem;
        margin-bottom: 2rem;
        padding: 0.5rem 2rem;
        background: $brand-success;
        color: #FFF;
        font-size: 1.25rem;
    }

    &--error {
        border: 4px $brand-danger solid;

        h3 {
            background: $brand-danger;
        }

        .far {
            font-size: 4rem;
            animation: thumbs-down 1s;
            margin-bottom: 1rem;
        }
    }
}

.ballot-receipt {
    .ballot {
        &__edition .btn {
            margin-top: -0.4rem;
        }

        &__ref {
            text-align: center;
            font-family: $font-family-monospace;
            margin-bottom: 1rem;
            border-bottom: 1px $gray-lighter solid;

            img {
                vertical-align: middle;
            }
        }

        &__contents {
            h4 {
                color: $gray;
                font-size: 1.25rem;
            }
        }

        &__signature {
            font-family: $font-family-monospace;
            font-size: 0.75rem;
            color: $gray-600;
            word-break: break-all;
            padding-top: 1rem;
            margin-top: 1rem;
            border-top: 1px $gray-lighter solid;
        }

        &__points {
            text-align: right;
            color: $gray-600;
            font-style: italic;
        }
    }
}

.ballot-lookup {
    &__input:focus {
        box-shadow: 0 0 0 3px rgba($brand-primary, .25);
    }
}

.ballot-lookup-wrapper .ballot-lookup {
    max-width: 600px;
    margin: 2rem auto 0 auto;
}

.option-modal {
    .modal-title {
        color: $brand-primary;
    }

    h4 {
        color: $gray;
        font-size: 1.25rem;
        margin-top: 1rem;
    }

    .option-cost {
        font-size: 2rem;
    }

    .option-attachments {
        margin: 0;
        padding: 0;

        li {
            list-style: none;
        }
    }

    .option-pictures {
        margin-top: 1rem;

        img {
            width: 100%;
            margin: 0.25rem 0;
        }
    }
}

.template-cards {
    .option {
        position: relative;
        width: 100%;
        margin: 0.75rem 0;
        padding: 1.25rem 1.25rem 3rem 1.25rem;
        transition-timing-function: ease-out;
        transition-duration: .15s;
        transform: translateY(0);
        box-shadow: $card-shadow;
        border: 2px darken($gray-lighter, 10%) solid;
        border-radius: 2px;
        overflow: hidden;

        &:hover {
            background: lighten($brand-primary, 50%);
            transform: translateY(-4px);
            box-shadow: $card-raised-shadow;
            border-color: lighten($brand-primary, 10%);
        }

        &:active {
            background: lighten($brand-primary, 45%);
        }

        &.selected {
            background: $brand-primary;
            color: #FFF;
            box-shadow: $card-raised-shadow;
            transform: translateY(-4px);
            border-color: $brand-primary;

            &:hover {
                background: darken($brand-primary, 5%);
                border-color: darken($brand-primary, 5%);
            }

            .option-cost, a {
                color: #FFF;
                opacity: 0.8;
            }

            .custom-control-indicator {
                box-shadow: 0 0 0 1px #F1F2F3, 0 0 0 3px #2980b9 !important;
            }
        }

        &.disabled:hover {
            background: #FFF;
            color: $gray-lightest;
            box-shadow: $card-shadow;
            transform: none;
            border: 2px darken($gray-lighter, 10%) solid;
        }
    }
}

.template-2column,
.template-simple {
    .selected {
        background: lighten($brand-primary, 50%);
        box-shadow: inset -4px 0px 0px 0px $brand-primary;
    }
}

.template-simple {
    .custom-control {
        margin-right: 5rem;
    }
}

@include media-breakpoint-up(lg) {
    .template-2column {
        .list-group {
            flex-direction: row;
            flex-wrap: wrap;
        }

        .list-group-item {
            width: 50%;
            height: 160px;
            align-items: flex-start;
            overflow: hidden;
            padding-bottom: 3rem;
        }
    }

    .template-cards {
        .option-group {
            column-count: 2;
            column-gap: 1.5rem;
        }

        .option {
            height: 160px;
        }
    }

    .booth-mode .template-2column {
        .list-group-item {
            width: 33.3%;
        }
    }

    .booth-mode .template-cards {
        .option-group {
            column-count: 3;
        }
    }
}

